Bug 473103 - [Brush editor] Rotation -> Drawing Angle -> Angle Offset has no effect.
Summary: [Brush editor] Rotation -> Drawing Angle -> Angle Offset has no effect.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Appimage Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2023-08-07 11:29 UTC by David REVOY
Modified: 2023-08-07 15:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David REVOY 2023-08-07 11:29:08 UTC
Hi! 
The slider for "Angle Offset" in Rotation -> Drawing Angle doesn't affect the rotation of the brush tip anymore in Krita 5.2beta1~appimage. It breaks one default brush preset in 5.2beta1 "m) RGBa 02 Thickpaint", and some of my brush pack as well. 

Sorry Dmitry for not catching this bug during the Lager rewrite and tests on K-A :-) 

To reproduce:
============
1) Select the default brush "m) RGBa 02 Thickpaint"
2) Open Brush Editor, select Rotation, Drawing angle, and tweak the "Angle Offset" (90° for this brush)
3) Paint on the canvas or scratchpad while tweaking: no rotation is affected.

Expected:
========
The brush preset usually has its dab/brush-tip rotated 90°, making large brush strokes. With this bug, all its dabs are not 90° rotated, making them aligned in the continuity of the line (they should be perpendicular to the path, having an offset of 90°).

Workaround:
===========
Rotation of the brush tip can be compensated manually in the "Brush Tip" -> Rotation. But it is a change at the root of the brush rotation and might affect other sensors using the brush tip.
Comment 1 Dmitry Kazakov 2023-08-07 15:00:33 UTC
Git commit 14649401ef18c7dbfa2876f9ec7f1c400c4053e5 by Dmitry Kazakov.
Committed on 07/08/2023 at 17:00.
Pushed by dkazakov into branch 'master'.

Fix angle offset in Drawing Angle sensor

M  +1    -1    plugins/paintops/libpaintop/sensors/KisDynamicSensorDrawingAngle.h

https://invent.kde.org/graphics/krita/-/commit/14649401ef18c7dbfa2876f9ec7f1c400c4053e5
Comment 2 Dmitry Kazakov 2023-08-07 15:05:05 UTC
Git commit 272848ae5916e0b824694674e3834498f025a453 by Dmitry Kazakov.
Committed on 07/08/2023 at 17:04.
Pushed by dkazakov into branch 'krita/5.2'.

Fix angle offset in Drawing Angle sensor

M  +1    -1    plugins/paintops/libpaintop/sensors/KisDynamicSensorDrawingAngle.h

https://invent.kde.org/graphics/krita/-/commit/272848ae5916e0b824694674e3834498f025a453