Fix angle offset in Drawing Angle sensor

BUG:473103